# 15Puzzle

./: CMakeLists.txt  Options.h  README.md  main.cpp
GameController/GameController/: GameController.cpp  GameController.h
GameController/GameField/: GameField.cpp  GameField.h
GameController/Graphics/: Graphics.cpp  Graphics.h
GameController/Menu/: Menu.cpp  Menu.h
GameController/Params/: Constants.h  ERRORS.h
GameController/Player/: Player.cpp  Player.h
GameController/Shop/: Shop.cpp  Shop.h
libs/Color/: Color.cpp  Color.h
libs/Coordinates/: Coordinates.cpp  Coordinates.h
libs/MathHandler/: MathHandler.cpp  MathHandler.h
libs/Matrix/: matrix.cpp  matrix.h
libs/MyRandom/: myRandom.cpp  myRandom.h
libs/PixelDigits/: PixelDigits.cpp  PixelDigits.h
